# higher-free-macro

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: rust.yml
examples/text-adventure/: data.rs  dsl.rs  logic.rs  main.rs  side_effects.rs
src/: lib.rs
tests/: multiple_generics.rs  multiple_generics_lifetime.rs  trivial.rs  trivial_lifetime.rs  vector.rs  with_lifetimes.rs
