[package]
name = "higher-free-macro"
version = "0.0.1"
edition = "2021"
authors = ["Andreas Grois"]
rust-version = "1.66.1"
description = "A macro that allows to conjure a Free Monad for every Functor. This builds on the traits from the higher crate, and re-exports said crate."
repository = "https://github.com/soulsource/higher-free-macro"
license = "MPL-2.0+"
keywords = ["functor", "applicative", "monad", "category-theory", "haskell"]

[dependencies]
higher = "0.2"